# chat_gpt_cli

./: Cargo.toml  README.md
src/: args.rs  chat.rs  main.rs  util.rs
